modified nav menu responsiveness flow

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
           <p>Our cities</p>
           <p>Sign up</p>
         </div>
-        <h1 id="nav__opener">
-          <img width="30" src="./resources/icons8-menu-50.png" />
-        </h1>
+        <div class="hambuger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
 
       <div class="hero__text__button__wrapper">
